* "sjp.poly" now also returns cutpoints of loess curvature, to get maximum / minimum values of loess curvature.

Bug fixes:
* "sjp.grpfrq" did not show correct number of missings (argument "na.rm = FALSE"), if grouping variable startet with zero.
* Fixed bug with "sjp.frq" and "sjt.frq", when variable was a labelled factor with lowest factor level smaller than 1.

Version 1.8.2
------------------------------------------------------------------------------
General:
* "view_spss" is now deprecated. Use "view_df" instead.
* Package documentation got major revisions.
* Updated namespaces to meet new CRAN namespace requirements.

New functions:
* "sjp.poly" to plot polynomial curves for (generalized) linear regressions.

Changes to functions:
* Model and table summaries in plotting functions (like "sjp.lm" or "sjp.grpfrq") are no longer printed by default. Use "showTableSummary = TRUE" or "showModelSummary = TRUE" to print summaries in plots.
* Added more plotting type options (see "type" parameter) to "sjp.glm", "sjp.glmer", "sjp.lm" and "sjp.lmer": "eff" for plotting marginal effects of model terms, and "poly" to plot predicted values of polynomial terms (only for linear (mixed) models).
* Added parameter "pointLabels" to "sjp.scatter" to plot scattered text labels.
* Added parameter "int.term" to "sjp.int", to plot selected interaction terms for "type = 'eff'". May be used in cases where effect computation takes too long or even crashes due to out-of-memory-problems.
* Added parameter "axisLimits.x" to "sjp.int", "sjp.frq" and "sjp.grpfrq".
* Added parameter "showAICc" to "sjt.lm", "sjt.glm", "sjt.lmer" and "sjt.glmer" to print second-order AIC.
* Improved automatic y-axis-limit detection in "sjp.frq" and "sjp.grpfrq".
* For "sjt.lm" and "sjt.glm", if "digits.p" is greater than 3, p-values less than 0.001 will no longer be abbreviated to "<0.001". Instead, the exact value (rounded to digits.p) will be printed.