@@ -18,6 +18,7 @@ export(sjp.frq)
 export(sjp.glm)
 export(sjp.glmer)
 export(sjp.glmm)
+export(sjp.gpt)
 export(sjp.grpfrq)
 export(sjp.int)
 export(sjp.likert)
